# new_rules_uniffi

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  rules_jvm_external~~maven~uniffi_maven_install.json
.github/workflows/: release.yaml  release_prep.sh
docs/: rules_uniffi.md
examples/trivial/: .bazelrc  BUILD  Cargo.toml  MODULE.bazel  WORKSPACE  WORKSPACE.bzlmod
examples/trivial/android/: AndroidManifest.xml  BUILD  MainActivity.kt  Test.kt
examples/trivial/ios/: App.swift  BUILD
examples/trivial/kt-jvm/: BUILD  main.kt
examples/trivial/src/: lib.rs
examples/trivial/swift/: BUILD  main.swift  test.swift
uniffi/: BUILD  defs.bzl  repositories.bzl  setup.bzl
uniffi/private/: BUILD  defs.bzl  extensions.bzl  kotlin.bzl  providers.bzl  rust.bzl  swift.bzl
uniffi/private/generate/: BUILD  Cargo.toml  defs.bzl
uniffi/private/generate/src/: cli.rs  main.rs
