module(
    name = "rules_uniffi",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_android", version = "0.1.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_rust", version = "0.50.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_kotlin", version = "1.9.6")
bazel_dep(name = "rules_swift", version = "2.1.1", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "stardoc", version = "0.7.0")

deps = use_extension("@rules_uniffi//uniffi/private:extensions.bzl", "i")
use_repo(
    deps,
    # jvm deps
    "net_java_dev_jna_jna_aar",
    "net_java_dev_jna_jna_jar",
    # bin deps
    "ucr__anyhow-1.0.89",
    "ucr__camino-1.1.9",
    "ucr__clap-4.5.17",
    "ucr__uniffi_bindgen-0.28.1",
    "ucr__uniffi_core-0.28.1",
    "ucr__uniffi_macros-0.28.1",
)
