module(
    name = "rules_uniffi",
    version = "0.0.2",
    compatibility_level = 1,
)

bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_java", version = "7.2.0")
bazel_dep(name = "rules_android", version = "0.5.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_rust", version = "0.50.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_kotlin", version = "1.9.6")
bazel_dep(name = "rules_swift", version = "2.1.1", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "stardoc", version = "0.7.0")

bazel_dep(name = "apple_support", version = "1.17.0", dev_dependency = True)

bazel_dep(
  name = "rules_jvm_external",
  version = "6.4"
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "uniffi_maven",
    artifacts = [
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.9.0",
        "net.java.dev.jna:jna:5.15.0"
    ],
    repositories = [
      "https://repo1.maven.org/maven2",
      "https://maven.google.com",
    ],
    lock_file = "@rules_uniffi//:rules_jvm_external~~maven~uniffi_maven_install.json",
)

use_repo(maven, "uniffi_maven")


deps = use_extension("@rules_uniffi//uniffi/private:extensions.bzl", "i")
use_repo(
    deps,
    # bin deps
    "id__anyhow-1.0.89",
    "id__camino-1.1.9",
    "id__clap-4.5.17",
    "id__uniffi_bindgen-0.28.1",
    "id__uniffi_core-0.28.1",
    "id__uniffi_macros-0.28.1",
)

remote_android_extensions = use_extension(
    "@rules_android//bzlmod_extensions:android_extensions.bzl",
    "remote_android_tools_extensions")
use_repo(remote_android_extensions, "android_gmaven_r8", "android_tools")

register_toolchains(
    "@rules_android//toolchains/android:android_default_toolchain",
    "@rules_android//toolchains/android_sdk:android_sdk_tools",
)

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")
