module(
    name = "rules_uniffi",
    version = "0.0.6",
    compatibility_level = 1,
)

bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_java", version = "7.2.0")
bazel_dep(name = "rules_android", version = "0.6.1")

git_override(
    module_name = "rules_android",
    commit = "bd6d0e3644cb6d7183280a2e01a644677f64430d",
    remote = "https://github.com/bazelbuild/rules_android.git",
)

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_rust", version = "0.56.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_swift", version = "2.1.1", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "stardoc", version = "0.7.0")

bazel_dep(name = "apple_support", version = "1.17.0", dev_dependency = True)

bazel_dep(
  name = "rules_jvm_external",
  version = "6.4"
)

bazel_dep(name = "rules_kotlin", version = "1.9.6")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "uniffi_maven",
    aar_import_bzl_label = "@rules_android//rules:rules.bzl",
    use_starlark_android_rules = True,
    artifacts = [
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.9.0",
        "net.java.dev.jna:jna:aar:5.14.0"
    ],
    repositories = [
      "https://repo1.maven.org/maven2",
      "https://maven.google.com",
    ],
    lock_file = "@rules_uniffi//:rules_jvm_external~~maven~uniffi_maven_install.json",
)

use_repo(maven, "uniffi_maven")


deps = use_extension("//uniffi/private:extensions.bzl", "i")
use_repo(
    deps,
    # bin deps
    "id__anyhow-1.0.89",
    "id__camino-1.1.9",
    "id__clap-4.5.17",
    "id__uniffi_bindgen-0.29.0",
    "id__uniffi_core-0.29.0",
    "id__uniffi_macros-0.29.0",
)

remote_android_extensions = use_extension(
    "@rules_android//bzlmod_extensions:android_extensions.bzl",
    "remote_android_tools_extensions")
use_repo(remote_android_extensions, "android_gmaven_r8", "android_tools")

register_toolchains(
    "@rules_android//toolchains/android:android_default_toolchain",
    "@rules_android//toolchains/android_sdk:android_sdk_tools",
)

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")
