[package]
name = "generate"
version = "0.1.0"
edition = "2021"

[dependencies]
uniffi_bindgen = { version = "=0.28.1" }
uniffi_core = { version = "=0.28.1" }
uniffi_macros = { version = "=0.28.1" }
anyhow = "1"
camino = { version = "1.0.8" }
clap = { version = "4", features = ["cargo", "std", "derive"] }
